# serializer version: 1
# name: test_sensor_snapshot[sensor.test_capsuleer_location-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_location',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Location',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Location',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'location',
    'unique_id': '12345678_location',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.test_capsuleer_location-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Location',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_location',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Jita',
  })
# ---
# name: test_sensor_snapshot[sensor.test_capsuleer_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'online',
        'offline',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Status',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'online',
    'unique_id': '12345678_online',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_snapshot[sensor.test_capsuleer_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Test Capsuleer Status',
      'options': list([
        'online',
        'offline',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'online',
  })
# ---
# name: test_sensor_snapshot[sensor.test_capsuleer_wallet_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.test_capsuleer_wallet_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wallet balance',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wallet balance',
    'platform': 'eveonline',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wallet_balance',
    'unique_id': '12345678_wallet_balance',
    'unit_of_measurement': 'ISK',
  })
# ---
# name: test_sensor_snapshot[sensor.test_capsuleer_wallet_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Test Capsuleer Wallet balance',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ISK',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.test_capsuleer_wallet_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1234567.89',
  })
# ---
